# frizzOS

./: .gitignore  CMakeLists.txt  README.md  contexts.c  datatypes.h  diskdriver.c  diskdriver.h  harddisk.c  makefile  pingpong-ipc.c  pingpong-mqueue.c  pingpong-msg.c  pingpong-prodcons.c  pingpong.c  pingpong.h  queue.c
p00/: CMakeLists.txt
p02/: CMakeLists.txt  a.out
subprojects/p02/: pingpong.c
